tests-integration/fixtures/checking/117_do_ado_constrained/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Tuple :: forall (a :: Type) (b :: Type). (a :: Type) -> (b :: Type) -> Tuple (a :: Type) (b :: Type)
map ::
  forall (f :: Type -> Type) (a :: Type) (b :: Type).
    Functor (f :: Type -> Type) =>
    ((a :: Type) -> (b :: Type)) ->
    (f :: Type -> Type) (a :: Type) ->
    (f :: Type -> Type) (b :: Type)
apply ::
  forall (f :: Type -> Type) (a :: Type) (b :: Type).
    Apply (f :: Type -> Type) =>
    (f :: Type -> Type) ((a :: Type) -> (b :: Type)) ->
    (f :: Type -> Type) (a :: Type) ->
    (f :: Type -> Type) (b :: Type)
pure ::
  forall (f :: Type -> Type) (a :: Type).
    Applicative (f :: Type -> Type) => (a :: Type) -> (f :: Type -> Type) (a :: Type)
discard ::
  forall (m :: Type -> Type) (a :: Type) (b :: Type).
    Discard (m :: Type -> Type) =>
    (m :: Type -> Type) (a :: Type) ->
    ((a :: Type) -> (m :: Type -> Type) (b :: Type)) ->
    (m :: Type -> Type) (b :: Type)
bind ::
  forall (m :: Type -> Type) (a :: Type) (b :: Type).
    Bind (m :: Type -> Type) =>
    (m :: Type -> Type) (a :: Type) ->
    ((a :: Type) -> (m :: Type -> Type) (b :: Type)) ->
    (m :: Type -> Type) (b :: Type)
testDo ::
  forall (m :: Type -> Type). Monad (m :: Type -> Type) => (m :: Type -> Type) (Tuple Int String)
testDo' ::
  forall (t58 :: Type -> Type).
    Bind (t58 :: Type -> Type) => (t58 :: Type -> Type) (Tuple Int String)
testAdo ::
  forall (f :: Type -> Type).
    Applicative (f :: Type -> Type) => (f :: Type -> Type) (Tuple Int String)
testAdo' ::
  forall (t97 :: Type -> Type).
    Applicative (t97 :: Type -> Type) => (t97 :: Type -> Type) (Tuple Int String)
testDoDiscard :: forall (m :: Type -> Type). Monad (m :: Type -> Type) => (m :: Type -> Type) Int
testDoDiscard' ::
  forall (t117 :: Type -> Type). Discard (t117 :: Type -> Type) => (t117 :: Type -> Type) Int

Types
Tuple :: Type -> Type -> Type
Functor :: (Type -> Type) -> Constraint
Apply :: (Type -> Type) -> Constraint
Applicative :: (Type -> Type) -> Constraint
Discard :: (Type -> Type) -> Constraint
Bind :: (Type -> Type) -> Constraint
Monad :: (Type -> Type) -> Constraint

Data
Tuple
  Quantified = :0
  Kind = :0


Roles
Tuple = [Representational, Representational]

Classes
class Functor (&0 :: Type -> Type)
class Functor (&0 :: Type -> Type) <= Apply (&0 :: Type -> Type)
class Apply (&0 :: Type -> Type) <= Applicative (&0 :: Type -> Type)
class Applicative (&0 :: Type -> Type) <= Discard (&0 :: Type -> Type)
class Applicative (&0 :: Type -> Type) <= Bind (&0 :: Type -> Type)
class Bind (&0 :: Type -> Type) <= Monad (&0 :: Type -> Type)

Diagnostics
error[NoInstanceFound]: No instance found for: Discard (&0 :: Type -> Type)
  --> 44:1..44:44
   |
44 | testDoDiscard :: forall m. Monad m => m Int
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
